# terok-dbus

./: .gitignore  AGENTS.md  Makefile  README.md  REUSE.toml  mkdocs.yml  pyproject.toml  sonar-project.properties  tach.toml  vulture_whitelist.py
.github/: copilot-instructions.md  requirements-ci.txt
.github/workflows/: analysis.yml  ci.yml  docs.yml  release.yml  sonar_pr.yml
contrib/systemd/: terok-dbus.service
docs/: developer.md  gen_brand_css.py  gen_ci_map.py  gen_quality_report.py  index.md
docs/img/: architecture.d2
src/terok_clearance/: __init__.py
src/terok_clearance/cli/: main.py  registry.py
src/terok_clearance/client/: client.py  identity_resolver.py  subscriber.py
src/terok_clearance/domain/: container_info.py  events.py  identity.py  inspector.py
src/terok_clearance/hub/: ingester.py  server.py
src/terok_clearance/notifications/: _sanitize.py  callback.py  desktop.py  factory.py
src/terok_clearance/notifier/: __init__.py  app.py
src/terok_clearance/resources/: install_hardening.sh
src/terok_clearance/resources/apparmor/: terok-clearance-hub  terok-clearance-notifier
src/terok_clearance/resources/selinux/: terok_clearance_hub.te  terok_clearance_notifier.te
src/terok_clearance/resources/systemd/: terok-clearance-hub.service  terok-clearance-notifier.service  terok-clearance-verdict.service
src/terok_clearance/runtime/: hardening.py  installer.py  service.py
src/terok_clearance/verdict/: client.py  interface.py  server.py  shield_exec.py  socket.py
src/terok_clearance/wire/: errors.py  interface.py
src/terok_dbus/: __init__.py  _callback.py  _clearance.py  _cli.py  _client.py  _event_ingester.py  _hub.py  _identity.py  _install.py  _interfaces.py  _notifier.py  _null.py  _podman.py  _protocol.py  _registry.py  _serve.py  _subscriber.py  _wire.py
src/terok_dbus/resources/systemd/: terok-dbus.service
tests/: conftest.py  test_clearance.py  test_cli.py  test_client.py  test_event_ingester.py  test_hub.py  test_identity_resolver.py  test_init.py  test_inspector.py  test_install.py  test_interfaces.py  test_notifier.py  test_notifier_app.py  test_notifier_install.py  test_null.py  test_podman.py  test_registry.py  test_sanitize.py  test_serve.py  test_shield_exec.py  test_subscriber.py  test_version.py  test_wire.py
tests/containers/: Containerfile.debian12  Containerfile.debian13  Containerfile.fedora43  Containerfile.podman  Containerfile.ubuntu2404  run-matrix.sh
tests/integration/: conftest.py  test_cli_integration.py  test_notify_lifecycle.py  test_subscriber_integration.py
