[build-system]
requires = ["poetry-core>=1.9.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "terok-dbus"
version = "0.5.12"
description = "D-Bus desktop notification package for terok"
readme = "README.md"
license = "Apache-2.0"
authors = ["terok maintainers"]
keywords = ["dbus", "notifications", "desktop", "freedesktop"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Topic :: Desktop Environment",
]

packages = [
  { include = "terok_dbus", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
dbus-fast = ">=2.0,<5.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.10"
pre-commit = ">=4.0"
bandit = ">=1.7"
docstr-coverage = "^2.3.2"
complexipy = ">=5.0"
vulture = ">=2.12"
reuse = "^6.2.0"
tach = "^0.34.1"

[tool.poetry.group.test.dependencies]
pytest = ">=9.0.3"
pytest-cov = ">=4.0"
pytest-asyncio = ">=0.21.0"
python-dbusmock = ">=0.32"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.5,<2"
mkdocs-material = ">=9.0"
mkdocstrings = {extras = ["python"], version = ">=0.24"}
mkdocs-gen-files = ">=0.5"
mkdocs-literate-nav = ">=0.6"
mkdocs-section-index = ">=0.3"
mkdocs-terok = {url = "https://github.com/terok-ai/mkdocs-terok/releases/download/v0.1.0/mkdocs_terok-0.1.0-py3-none-any.whl"}

[tool.poetry.scripts]
terok-dbus = "terok_dbus._cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
  "integration: requires a running D-Bus session bus",
  "needs_dbus: requires a D-Bus session bus on DBUS_SESSION_BUS_ADDRESS",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "SIM",    # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B904",   # raise from in except
  "SIM102", # nested if statements
  "SIM105", # contextlib.suppress vs try/except/pass
  "SIM108", # use ternary operator
  "SIM117", # nested with statements
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]
"tests/integration/test_subscriber_integration.py" = ["F821", "F722"]
# dbus_fast ServiceInterface signature strings ("s", "b", "u") look like undefined
# names to ruff; they are D-Bus type codes, not Python identifiers.  The quotes
# must stay — PEP 563 stringifies them but dbus_fast reads the raw strings.
"src/terok_dbus/_serve.py" = ["F821", "F722", "UP037"]

[tool.ruff.lint.isort]
known-first-party = ["terok_dbus"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^v(?P<base>\\d+\\.\\d+\\.\\d+)$"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
folders = [{path = "src"}]
